kube_deployment_yaml_files/model-exec-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: model-exec
  name: model-exec
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: model-exec
    spec:
      containers:
      - image: sumant29/sumant29:Model_Execution
        name: model-exec
        resources: {}
      restartPolicy: Always
status: {}
