kube_deployment_yaml_files/post-processing-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: post-processing
  name: post-processing
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: post-processing
    spec:
      containers:
      - image: sumant29/sumant29:Post_processing
        name: post-processing
        resources: {}
      restartPolicy: Always
status: {}
