kube_deployment_yaml_files/rabbit-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit
  name: rabbit
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: rabbit
    spec:
      containers:
      - imagePullPolicy: Always
        image: devoteam1/devoteam:rabbit_server
        name: rabbit
        ports:
        - containerPort: 15672
        - containerPort: 5672
        resources: {}
      restartPolicy: Always
status: {}
