kube_deployment_yaml_files/session-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: session
  name: session
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: session
    spec:
      containers:
      - imagePullPolicy: Always
        image: devoteam1/devoteam:session
        name: session
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
status: {}
