kube_deployment_yaml_files/ui-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    app: ui
  name: ui
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ui
    spec:
      containers:
      - imagePullPolicy: Always
        image: devoteam1/devoteam:ui
        name: ui
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
status: {}
