kube_deployment_yaml_files/session-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: session
  name: session
spec:
  type: LoadBalancer
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
    nodePort: 30001
  selector:
    app: session
