kube_deployment_yaml_files/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  type: LoadBalancer
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
    nodePort: 31515
  selector:
    app: ui
